<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="medium_text">Medium Text</string>
    <string name="text">Text</string>

    <string name="help">Help</string>

    <string name="pref_cat_sharing_title">Sharing</string>
    <string name="pref_clear_read_title">Clear Text On Move</string>
    <string name="pref_clear_read_summary">If set, when the cursor moves to a new text field in the calibration table, that field will be erased.\nIf not set, text will remain for editing.</string>
    <string name="pref_resolution_title">Data Resolution</string>
    <string name="pref_resolution_summary">Number of significant digits for data fields.\nMax:5\nCurrently set to</string>
    <string name="pref_resolution_dialogTitle">Choose</string>

    <string name="pref_cat_interface_title">Interface</string>

    <string name="calibrate">Calibrate</string>

    <string name="pref_email_title">Email</string>
    <string name="pref_email_summary">Default email address to send calibration results to</string>

    <string name="pref_preload_title">Pre-Load Device Info</string>
    <string name="pref_preload_summary">Load your default device configuration on app startup.</string>

    <string name="share_result">Share Result</string>

    <string name="settings">Settings</string>

    <string name="equip_id">Equip ID</string>
    <string name="serial">Serial</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="device">Device</string>
    <string name="calibrator">Calibrator</string>
    <string name="lrv">LRV</string>
    <string name="urv">URV</string>
    <string name="units">Units</string>
    <string name="steps">Steps</string>
    <string name="linearity">Linearity</string>
    <string name="linear_">Linear (/)</string>
    <string name="square_">Square (√)</string>
    <string name="edit">Edit</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="actual">Actual</string>
    <string name="dev_">Dev %</string>
    <string name="datalosswarning">If you leave this page, you will lose all calibration data.\nDo you want to leave?</string>

    <string name="app_name">FivePointApp</string>
    <string name="calibration_progress">Calibration Progress</string>
    <string name="contact">Contact</string>

    <string name="no_devices">No devices saved in the database.</string>
    <string name="saved_pt1">Saved device\u0020</string>
    <string name="saved_pt2">\u0020to the database.</string>
    <string name="new_default">New Default Device Saved:\n</string>

    <string name="george_romaka_gmail_com">george.romaka@gmail.com</string>
    <string name="facebook">FaceBook</string>
    <string name="https_www_facebook_com_george_romaka">https://www.facebook.com/george.romaka</string>
    <string name="e_mail">E-mail</string>
    <string name="https_twitter_com_toofat2serve">https://twitter.com/toofat2serve</string>
    <string name="twitter">Twitter</string>
    <string name="save_data">Save Data</string>
    <string name="larrow">←</string>
    <string name="rarrow">→</string>
    <string name="input">Input</string>
    <string name="expected">Expected</string>
    <string name="dev">Dev</string>
    <string name="plus">+</string>

</resources>
