<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/pref_cat_sharing_title"
        android:key="pref_cat_sharing">

		<EditTextPreference
			android:key="pref_email"
			android:title="@string/pref_email_title"
			android:summary="@string/pref_email_summary"
			android:defaultValue="george.romaka@gmail.com"/>
		
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_cat_interface_title"
        android:key="pref_cat_interface">

		<CheckBoxPreference
			android:key="pref_preload"
			android:title="@string/pref_preload_title"
			android:summary="@string/pref_preload_summary"
			android:defaultValue="true" />
		
		<CheckBoxPreference
			android:key="pref_clear_read"
			android:title="@string/pref_clear_read_title"
			android:summary="@string/pref_clear_read_summary"
			android:defaultValue="true"/>
		
		<ListPreference
			android:key="pref_resolution"
			android:title="@string/pref_resolution_title"
			android:summary="@string/pref_resolution_summary"
			android:dialogTitle="@string/pref_resolution_dialogTitle"
			android:entries="@array/string_array_resolution"
			android:entryValues="@array/string_array_resolution"
			android:defaultValue="3"/>
		
		
	</PreferenceCategory>

	


</PreferenceScreen>
