<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:background="#FFFFFF">

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:id="@+id/lv_rows"
		android:background="#FFFFFF">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:id="@+id/lh_row_1"
			android:background="#FFFFFF">

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:id="@+id/lv_id"
				android:layout_weight="19"
				android:background="#303030"
				android:layout_margin="1dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/equip_id"
					android:layout_gravity="center_horizontal"
					android:id="@+id/t_id"/>

				<EditText
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:ems="6"
					android:singleLine="true"
					android:id="@+id/e_id"
					android:gravity="center_horizontal"
					android:inputType="textCapCharacters|textNoSuggestions"
					android:textAppearance="?android:attr/textAppearanceSmall"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:id="@+id/lv_serial"
				android:layout_weight="21"
				android:background="#303030"
				android:layout_margin="1dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/serial"
					android:layout_gravity="center_horizontal"
					android:id="@+id/t_serial"/>

				<EditText
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:ems="6"
					android:singleLine="true"
					android:id="@+id/e_serial"
					android:gravity="center_horizontal"
					android:textAppearance="?android:attr/textAppearanceSmall"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:id="@+id/lv_make"
				android:layout_weight="20"
				android:background="#303030"
				android:layout_margin="1dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/make"
					android:layout_gravity="center_horizontal"
					android:id="@+id/t_make"/>

				<EditText
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:ems="6"
					android:singleLine="true"
					android:id="@+id/e_make"
					android:gravity="center_horizontal"
					android:textAppearance="?android:attr/textAppearanceSmall"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:id="@+id/lv_model"
				android:layout_weight="20"
				android:background="#303030"
				android:layout_margin="1dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/model"
					android:layout_gravity="center_horizontal"
					android:id="@+id/t_model"/>

				<EditText
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:ems="6"
					android:singleLine="true"
					android:id="@+id/e_model"
					android:gravity="center_horizontal"
					android:textAppearance="?android:attr/textAppearanceSmall"/>

			</LinearLayout>

		</LinearLayout>
		
		<LinearLayout
			android:id="@+id/lh_row_2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#FFFFFF"
			android:baselineAligned="false"
			android:orientation="horizontal">

			<LinearLayout
				android:id="@+id/lv_device"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="1dp"
				android:layout_weight="1.0"
				android:background="#300000"
				android:gravity="center_horizontal"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/device"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/lv_cal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="1dp"
				android:layout_weight="1.0"
				android:background="#000030"
				android:gravity="center_horizontal"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/calibrator"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/lh_row_3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#FFFFFF"
			android:baselineAligned="false"
			android:orientation="horizontal">

			<LinearLayout
				android:id="@+id/lv_dlrv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="1dp"
				android:layout_weight="2"
				android:background="#300000"
				android:orientation="vertical">

				<TextView
					android:id="@+id/t_dlrv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/lrv"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<EditText
					android:id="@+id/e_dlrv"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:ems="6"
					android:gravity="center_horizontal"
					android:inputType="numberDecimal|numberSigned"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceSmall"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/lv_durv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="1dp"
				android:layout_weight="2"
				android:background="#300000"
				android:orientation="vertical">

				<TextView
					android:id="@+id/t_durv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/urv"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<EditText
					android:id="@+id/e_durv"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:ems="6"
					android:gravity="center_horizontal"
					android:inputType="numberDecimal|numberSigned"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceSmall"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/lv_dunit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="1dp"
				android:layout_weight="3"
				android:background="#300000"
				android:gravity="center_horizontal"
				android:orientation="vertical">

				<TextView
					android:id="@+id/t_dunit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/units"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<Spinner
					android:layout_width="match_parent"
					android:layout_height="38dp"
					android:id="@+id/spin_dunit"
					android:background="@drawable/blankbg"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/lv_clrv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="1dp"
				android:layout_weight="2"
				android:background="#000030"
				android:orientation="vertical">

				<TextView
					android:id="@+id/t_clrv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/lrv"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<EditText
					android:id="@+id/e_clrv"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:ems="6"
					android:gravity="center_horizontal"
					android:inputType="numberDecimal|numberSigned"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceSmall"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/lv_curv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="1dp"
				android:layout_weight="2"
				android:background="#000030"
				android:orientation="vertical">

				<TextView
					android:id="@+id/t_curv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/urv"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<EditText
					android:id="@+id/e_curv"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:ems="6"
					android:gravity="center_horizontal"
					android:inputType="numberDecimal|numberSigned"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceSmall"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/lv_cunit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="1dp"
				android:layout_weight="3"
				android:background="#000030"
				android:gravity="center_horizontal"
				android:orientation="vertical">

				<TextView
					android:id="@+id/t_cunit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/units"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<Spinner
					android:layout_width="match_parent"
					android:layout_height="38dp"
					android:id="@+id/spin_cunit"
					android:clipToPadding="false"
					android:background="@drawable/blankbg"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/lh_row_4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#FFFFFF"
			android:baselineAligned="false"
			android:orientation="horizontal"
			android:weightSum="12">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="1dp"
				android:layout_weight="4"
				android:background="#303030"
				android:orientation="horizontal"/>

			<LinearLayout
				android:id="@+id/lv_steps"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="1dp"
				android:layout_weight="5"
				android:background="#303030"
				android:orientation="vertical">

				<TextView
					android:id="@+id/t_steps"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/steps"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<EditText
					android:id="@+id/e_steps"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:ems="10"
					android:gravity="center_horizontal"
					android:imeOptions="actionDone"
					android:inputType="number"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceSmall"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/lv_linsq"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="1dp"
				android:layout_weight="3"
				android:background="#303030"
				android:gravity="center_horizontal"
				android:orientation="vertical">

				<TextView
					android:id="@+id/t_linsq"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/linearity"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<RadioGroup
					android:id="@+id/rg_linsq"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checkedButton="@+id/rb_lin"
					android:orientation="horizontal">

					<RadioButton
						android:id="@+id/rb_lin"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/linear_"/>

					<RadioButton
						android:id="@+id/rb_squ"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/square_"/>

				</RadioGroup>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/vs_save_edit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autoStart="false"
			android:background="#FFFFFF"
			android:measureAllChildren="false">

			<LinearLayout
				android:id="@+id/vs_save_edit_1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:baselineAligned="false"
				android:orientation="horizontal"
				android:weightSum="3">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="1dp"
					android:layout_weight="1"
					android:background="#303030"
					android:orientation="horizontal">

					<Button
						android:id="@+id/btn_cal"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:onClick="clickCal"
						android:text="@string/calibrate"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="1dp"
					android:layout_weight="1"
					android:background="#303030"
					android:orientation="horizontal">

					<Button
						android:id="@+id/btn_reset"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/reset"
						android:onClick="clickReset"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="1dp"
					android:layout_weight="1"
					android:background="#303030"
					android:orientation="horizontal">

					<Button
						android:id="@+id/btn_clr"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/clear"
						android:onClick="clickClear"/>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

